--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a bot for Commands and stuff",
   "main": "index.js",
   "scripts": {
-    "test": "%test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tennu config.json -v"
   },
   "repository": {
     "type": "git",
