setEnd command, optimization
I added the setEnd command, and admin/op list, and fixed some bugs.

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "channels": ["#heartless"],
     "nickserv": "nickserv",
     "auth-password": null,
-    "plugins": ["blt", "luck"],
+    "plugins": ["blt", "luck", "countingGame"],
     "command-trigger": "%",
     "disable-help": false
 }
